--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	<parent>
+		<artifactId>business-logic</artifactId>
+		<groupId>qveta</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>data</groupId>
+	<packaging>jar</packaging>
 	<artifactId>data-jpa</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+
 	<dependencies>
+<!-- 		<dependency> -->
+<!-- 			<groupId>qveta</groupId> -->
+<!-- 			<artifactId>data-model</artifactId> -->
+<!-- 			<version>1.0-SNAPSHOT</version> -->
+<!-- 		</dependency> -->
+
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
